# oop_exercise_02

./: .gitignore  meson.build  my_report.tex  report.tex
include/: Complex.hpp  meson.build
src/: Complex.cpp  main.cpp  meson.build
tests/: meson.build  run_tests.cpp  test_01.cpp  test_02.cpp
